@@ -1,3 +1,8 @@
+2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/winFile.test: Handle Msys environment a little differently
+	in getuser function. Fix for bug 1567956.
+
 2006-09-30  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
